# ZDEM_ParticleTracker

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  README.zh-CN.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/screenshots/: capture_source.txt
scripts/: capture_real_shots.py  generate_evidence.py  self_diag.py
tests/: qt_subprocess.py  test_dat_parser.py  test_dat_scan.py  test_deep_paths.py  test_gui_smoke.py  test_interaction_paths.py  test_perf_paths.py  test_region_and_kinematics.py  test_render_pixels.py  test_selection_gate.py  test_selection_logic.py  test_trajectory_cancel.py  test_viewer_logic.py
zdem_particle_tracker/: __init__.py  __main__.py  app.py  config.py
zdem_particle_tracker/models/: __init__.py  particle_data.py
zdem_particle_tracker/parsers/: __init__.py  dat_parser.py  dat_scan.py
zdem_particle_tracker/rendering/: __init__.py  backend.py  cpu_raster.py  vispy_renderer.py
zdem_particle_tracker/services/: __init__.py  export_service.py  project_config.py  quality_report.py  region_detector.py  trajectory_service.py
zdem_particle_tracker/ui/: __init__.py  about_dialog.py  group_legend_panel.py  side_panels.py
zdem_particle_tracker/utils/: __init__.py  color_mapping.py  frame_cache.py  logging_utils.py
zdem_particle_tracker/widgets/: __init__.py  main_viewer.py  selection_logic.py  series_plot.py  viewer_logic.py
zdem_particle_tracker/workers/: __init__.py  frame_load_worker.py
